2006-09-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* input/regression/repeat-percent-grace.ly: new file.

	* lily/percent-repeat-engraver.cc (start_translation_timestep):
	remember first currentCommandColumn of a grace run. Fixes issue 70.

	* lily/percent-repeat-iterator.cc (class Percent_repeat_iterator):
	move class definition to CC file.

	* lily/multi-measure-rest.cc (percent): use robust_relative_extent()

	* lily/slash-repeat-engraver.cc (listen_percent): don't warn for
	measure-long  repeats.

	* flower/include/international.hh: include stdarg.h

2006-09-30  Joe Neeman  <joeneeman@gmail.com>

	* lily/page-turn-page-breaking.cc (calc_demerits): now that we allow
	put_systems_on_pages to return an empty result, we need to assign
	demerits properly in that case.
	(put_systems_on_pages): Make the number of pages depend on the
	evenness of page_number. Add auto-first-page-number.
	(calc_subproblem): ensure that the page-number is even for the
	left-hand page. Warn if the first page-turn doesn't fit onto the
	first (right-hand) page.

	* lily/page-spacing.cc (solve): bug: demerits_ would always be inf
	(min_page_count): make this publicly accessible
	(min_page_count): fix a bug when there are forced page breaks that
	was introduced when I made this loop run backwards
	(space_systems_on_n_pages, space_systems_on_n_or_one_more_pages):
	replace space_systems_on_min_pages with these two. The logic in
	space_systems_on_min_pages was getting too convoluted and is better
	contained in page-turn-page-breaking.

	* lily/page-turn-engraver.cc (breakable_column): remove an always-true
	conditional
	(breakable_column): typo

	* lily/source-file.cc (get_line): fix off-by-one error
	and clean up some of the logic

2006-09-29  Joe Neeman  <joeneeman@gmail.com>

	* lily/page-breaking.cc (make_pages): honour the first-page-number
	property

2006-09-27  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): bump version.
